<resources>
    <string name="app_name">erandoo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_add">Email address</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="signin_with">Sign In With</string>
    <string name="signup_with">Sign Up With</string>
    <string name="Not_yet_registred">Not yet registered?</string>
    <string name="Already_registred">Already registered?</string>
    <string name="term1">I agree with</string>
    <string name="term2">terms of uses.</string>
    <string name="Notifications">Notifications</string>
    <string name="Choose_a_Category">Choose a Category</string>
    <string name="Choose_a_sub_Category">Choose a Sub-Category</string>
    <string name="btn_add_category">+</string>
    <string name="Project_Template">Template</string>
    <string name="Hint_Choose_Template">Choose Template</string>
    <string name="Project_Description">Description</string>
    <string name="Hint_Write_Description">Enter Description</string>
    <string name="Project_Notes">Notes</string>
    <string name="Hint_Project_Notes">Write Project Notes</string>
    <string name="Project_Title">Title</string>
    <string name="Hint_Enter_Title">Enter Title</string>
    <string name="Attachment">Attachment</string>
    <string name="Completion_Date">Completion</string>
    <string name="Hint_Select_Date">Select Date</string>
    <string name="Expenses">Expenses</string>
    <string name="Switch_to_Hourly">Switch to Hourly</string>
    <string name="Switch_to_Fixed">Switch to Fixed</string>
    <string name="Hours_per_week">Hours per Week</string>
    <string name="Estimated_Cost">Estimated Cost</string>
    <string name="Total_Cost">Total Cost</string>
    <string name="Visibility">Visibility</string>
    <string name="Posting_Type">Posting Type</string>
    <string name="Private">Private</string>
    <string name="Public">Public</string>
    <string name="Premium">Premium</string>
    <string name="Highlighted">Highlighted</string>
    <string name="Seal_all_proposal">Seal all proposal</string>
    <string name="Seal_my_proposal">Seal my proposal</string>
    <string name="Doer_Details">Doer Details</string>
    <string name="Invite_Doers">Invite Doers</string>
    <string name="Doer_location">Doer location</string>
    <string name="Doer_Location_Range">Doer Location Range</string>
    <string name="Anywhere">Anywhere</string>
    <string name="Country">Country</string>
    <string name="Countries">Countries</string>
    <string name="Hint_Choose_a_Country">Choose Countries</string>
    <string name="Skills">Skills</string>
    <string name="Add_Skill">Choose Skills</string>
    <string name="Questions">Questions</string>
    <string name="Add">Add</string>
    <string name="Choose_a_Question">Choose Questions</string>
    <string name="Create_a_Question">Create a Question</string>
    <string name="Done">Done</string>
    <string name="Featured">Featured</string>
    <string name="Previous">Previous</string>
    <string name="Favorite">Favorite</string>
    <string name="Search">Search</string>
    <string name="Search_Doers">Search Doers</string>
    <string name="to">to</string>
    <string name="Post">Post</string>
    <string name="Project_Category">Project Category</string>
    <string name="Bid_Duration">Bid Duration</string>
    <string name="Hint_Select_Bid_Duration">Select Bid Duration</string>
    <string name="Select_Date">Select Date</string>
    <string name="Cancel">Cancel</string>
    <string name="Set">Set</string>
    <string name="Select_Doer">Select a Doer</string>
    <string name="Auto_Selected_Doer">Auto Selected Doer</string>
    <string name="Instant_fee">$2 Instant fee</string>
    <string name="Hint_Select_Hours">Select Hours</string>
    <string name="Project_Completion">Project Completion</string>
    <string name="Price">Price</string>
    <string name="Stamps_Tickets_etc">Stamps, Tickets etc.</string>
    <string name="Allow_system_choose_Doer">System automatically choose a Doer for you</string>
    <string name="Hint_Select_hours">Select hours</string>
    <string name="Project_Completed_By">Project Completed By </string>
    <string name="Search_Projects">Search Projects</string>
    <string name="Filters"> Filters </string>
    <string name="Sort"> Sort By </string>
    <string name="NProject">New Project</string>
    <string name="Hint_Select_Time">Select Time</string>
    <string name="flover_garden">Flover Garden</string>
    <string name="reply">Reply</string>
    <string name="filter_by">Filter By</string>
    <string name="all">All</string>
    <string name="payment">Payment</string>
    <string name="terms">Terms</string>
    <string name="feedback">Feedback</string>
    <string name="unread">Unread</string>
    <string name="send">Send</string>
    <string name="all_msg">All Messages</string>
    <string name="current">Current</string>
    <string name="open">Open</string>
    <string name="complete"> Complete </string>
    <string name="cancelled"> Cancelled </string>
    <string name="archived"> Archived </string>
    <string name="search_msg"> Search Message </string>
    <string name="project_detail"> Project Detail </string>
    <string name="delivery">Delivery</string>
    <string name="completed_by">Completed by:</string>
    <string name="type">Type:</string>
    <string name="typeWColon">Type</string>
    <string name="No_skill_specified">No skill specified</string>
    <string name="No_more_records">No more records</string>
    <string name="Result_founds">Result founds</string>
    <string name="select_time">Select Time</string>
    <string name="Saved_Location">Saved Location</string>
    <string name="Other_Location">Other Location</string>
    <string name="Hint_Search_location">Search location</string>
    <string name="Hint_Saved_locations">Choose Saved location</string>
    <string name="project_Type">Project Type</string>
    <string name="Saved_Projects">Saved Projects</string>
    <string name="All">All</string>
    <string name="Virtual">Virtual</string>
    <string name="In_Person">In Person</string>
    <string name="Relationships">Relationships</string>
    <string name="Connected">Connected</string>
    <string name="Worked_with_Before">Worked with Before</string>
    <string name="Time_Oldest_Posting">Time: Oldest Posting</string>
    <string name="Time_Newest_Posting">Time: Newest Posting</string>
    <string name="reset">Reset</string>
    <string name="Mark_Unread">Mark Unread</string>
    <string name="Mark_Read">Mark Read</string>
    <string name="Enter_Message">Enter Message</string>
    <string name="Delete">Delete</string>
    <string name="conversation"> Conversation </string>
    <string name="More">More</string>
    <string name="satisfaction">I will complete the Project to the satisfaction of the Project Poster. If the Poster is not completely satisfied, I agree to rework the Project until the Poster is completely satisfied, or if I am unable to satisfactorily complete the Project, I agree to receive no payment for this Project.</string>
    <string name="Authentication">This project has expected expenses. Checking this box means you are willing and able to pay these expenses and submit proper receipts for reimbursement by the Poster.</string>
    <string name="project"> Project </string>
    <string name="proposals"> Proposal </string>
    <string name="enter_Your_Proposal"> Enter your proposal </string>
    <string name="my_Pay"> My Pay </string>
    <string name="poster_Pay"> Poster Pay </string>
    <string name="time_to_Complete"> Time to Complete </string>
    <string name="answer"> Answer </string>
    <string name="submit"> Submit </string>
    <string name="craft_a_bid"> Craft A Bid</string>
    <string name="Project_posted">Projects I have posted</string>
    <string name="Projects_doing">Projects I am doing</string>
    <string name="My_Projects">My Projects</string>
    <string name="All_Projects">All Projects</string>
    <string name="Currently_Hiring">Currently Hiring</string>
    <string name="Active_Projects">Active Projects</string>
    <string name="Invited_Projects">Invited Projects</string>
    <string name="Completed_Projects">Completed Projects</string>
    <string name="Cancelled_Projects">Cancelled Projects</string>
    <string name="posted_by">Posted By:</string>
    <string name="SkillsWColon">Skills:</string>
    <string name="LocationWcolon">Location:</string>
    <string name="average_price">Avg. Price</string>
    <string name="clean_up_my_projects">Clean up my contacts</string>
    <string name="total_proposal">Total Proposal</string>
    <string name="start_date">Start Date:</string>
    <string name="read_more">Read More&#8230;</string>
    <string name="read_less">Read Less</string>
    <string name="category_project_detail">Category:</string>
    <string name="files"> Files </string>
    <string name="invoice">Invoice</string>
    <string name="Modified">Modified</string>
    <string name="find_members">Find Members</string>
    <string name="my_member_profile">My Member Profile</string>
    <string name="utilities">Utilities</string>
    <string name="settings">Settings</string>
    <string name="instant_availability">Instant Availability</string>
    <string name="New_Virtual">New Virtual</string>
    <string name="New_In_Person">New In-Person</string>
    <string name="New_Instant">New Instant</string>
    <string name="projects"> Projects </string>
    <string name="logout"> Logout </string>
    <string name="Edit">Edit</string>
    <string name="average_rating">Average Rating</string>
    <string name="Proposal_details">Proposal Detail</string>
    <string name="Question">Question</string>
    <string name="Project_by_the_desired_date">I can complete this project by the desired date of</string>
    <string name="my_Profile">My Profile</string>
    <string name="rating"> Ratings </string>
    <string name="portfolio"> Portfolio </string>
    <string name="overall"> Overall </string>
    <string name="conntected_member"> Connected Members </string>
    <string name="location_worked"> Location Worked </string>
    <string name="work_history"> Work History </string>
    <string name="recommandation"> Recommendation </string>
    <string name="whyimawesome"> Why I\'m Awesome </string>
    <string name="select_category"> Select Category </string>
    <string name="request_recommendation">Request Recommandation</string>
    <string name="msg_recommendation_send_successfully">Recommendation send successfully</string>
    <string name="no_project_completed">No project completed</string>
    <string name="highly_rated">Highly Rated</string>
    <string name="most_experienced">Most Experienced</string>
    <string name="previously_hired">Previously Hired</string>
    <string name="select_city">Select City</string>
    <string name="state">Select State</string>
    <string name="select_country">Select Country</string>
    <string name="select_region"> Select Region</string>
    <string name="zipCode">Zip Code</string>
    <string name="Use_Camera">Use Camera</string>
    <string name="Use_Existing_Photos">Use Existing Photos </string>
    <string name="Upload_Photo">Upload Photo?</string>
    <string name="we_have_made_the_login_process">We\'ve made the login process easy; you can use your Facebook or LinkedIn account to sing in. Or, you can manually insert your info and set up a new account right now.</string>
    <string name="Confirm">Confirm</string>
    <string name="Email_Address">Email Address</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Street_Address">Street Address</string>
    <string name="Signup_With">Sign Up With </string>
</resources>