<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp" >

    <ImageView
        android:layout_width="@dimen/LogoWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/LogoMargin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/eTextLEmail"
        style="@style/font_login_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditTextWidth"
        android:background="@drawable/ed_edit_text_login"
        android:hint="@string/email_add"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:singleLine="true"
        android:textCursorDrawable="@color/ed_color_orange_light" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/eTextLPassword"
        style="@style/font_login_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditTextWidth"
        android:layout_marginTop="@dimen/LogoMargin"
        android:background="@drawable/ed_edit_text_login"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="8dp"
        android:singleLine="true"
        android:textCursorDrawable="@color/ed_color_orange_light" >
    </EditText>

    <TextView
        android:id="@+id/txtForgotPass"
        style="@style/font_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/LogoMargin"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/forgot_pass"
        android:textColor="@drawable/ed_text_green_selector" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/font_login_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditTextWidth"
        android:background="@drawable/ed_btn_login_selector"
        android:text="@string/sign_in" />

    <TextView
        style="@style/font_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/LogoMargin"
        android:gravity="center"
        android:text="@string/signin_with" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imvFBLogin"
            android:layout_width="@dimen/EditTextWidth"
            android:layout_height="@dimen/EditTextWidth"
            android:background="@drawable/ed_icon_btn_selector"
            android:contentDescription="@string/app_name"
            android:padding="3dp"
            android:src="@drawable/ic_fb" />

        <ImageView
            android:layout_width="@dimen/EditTextWidth"
            android:layout_height="@dimen/EditTextWidth"
            android:layout_marginLeft="@dimen/MarginLeft"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_in"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/MarginLeft" >

        <TextView
            android:id="@+id/txtLlbl"
            style="@style/font_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/Not_yet_registred" />

        <TextView
            android:id="@+id/txtSignUp"
            style="@style/font_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txtLlbl"
            android:padding="4dp"
            android:text="@string/sign_up"
            android:textColor="@drawable/ed_text_green_selector" />
    </RelativeLayout>

</LinearLayout>