<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_header_h"
        android:background="@color/ed_color_orange_light" >

        <ImageView
            android:id="@+id/imgMBack"
            android:layout_width="@dimen/app_header_h"
            android:layout_height="match_parent"
            android:background="@drawable/ed_btn_focus_selector"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_close_w" />

        <TextView
            android:id="@+id/txtMTitle"
            style="@style/font_header_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/filter_by" />

        <TextView
            android:id="@+id/txtMDone"
            style="@style/font_white_text_project_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/ed_btn_white_border_selector"
            android:gravity="center"
            android:text="@string/Done"
            android:textSize="@dimen/ed_text_size_14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtMReset"
            style="@style/font_white_text_project_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/ed_btn_white_border_selector"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="@dimen/ed_text_size_14sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtMHrated"
                style="@style/font_field_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/etxt_dialog_h"
                android:gravity="center|left"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/highly_rated" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/field_title_bg" />

            <TextView
                android:id="@+id/txtMMExp"
                style="@style/font_field_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/etxt_dialog_h"
                android:gravity="center|left"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/most_experienced" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/field_title_bg" />

            <TextView
                android:id="@+id/txtMPhired"
                style="@style/font_field_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/etxt_dialog_h"
                android:gravity="center|left"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/previously_hired" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/field_title_bg" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>