<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/trans_color"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ed_white_rounded_selector"
        android:orientation="vertical" >

        <TextView
            style="@style/font_field_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Upload_Photo"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30888888" />

        <TextView
            android:id="@+id/txtUseCamera"
            style="@style/font_orange_text_project_list"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Use_Camera"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30888888" />

        <TextView
            android:id="@+id/txtUseExistPhoto"
            style="@style/font_orange_text_project_list"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Use_Existing_Photos"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtUploadPhotoCancel"
        style="@style/font_orange_text_project_list"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:background="@drawable/ed_white_rounded_selector"
        android:layout_marginTop="10dp"
        android:text="@string/Cancel"
        android:textStyle="bold"
        android:textSize="18sp" />

</LinearLayout>